...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/md_keylines"
                android:textColorHint="@color/colorDivider">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_keylines_x11"
                    android:background="@color/colorButton"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/md_keylines"
                android:textColorHint="@color/colorDivider">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_keylines_x11"
                    android:background="@color/colorButton"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
...
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/md_keylines"
                android:textColorHint="@color/colorDivider"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_keylines_x11"
                    android:background="@color/colorButton"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
...
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/md_keylines"
                android:textColorHint="@color/colorDivider"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_keylines_x11"
                    android:background="@color/colorButton"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/md_keylines_x3"
                android:textColorHint="@color/colorDivider">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/classid"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_keylines_x11"
                    android:background="@color/colorButton"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:paddingStart="@dimen/md_keylines_x2"
                    android:paddingEnd="@dimen/md_keylines_x2"
                    android:hint="@string/classid" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/avatar_height"
                android:layout_marginTop="@dimen/md_keylines_x2"
                android:layout_marginBottom="@dimen/md_keylines_x2"
                android:scrollbars="horizontal"
                android:scrollbarStyle="outsideInset" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_keylines"
                android:layout_marginBottom="@dimen/md_keylines_x4"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorAccent"
...
