...
        android:id="@+id/list_avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        tools:src="@drawable/avatar_dog"/>

    <TextView
        android:id="@+id/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/md_keylines_x3"
        android:layout_toEndOf="@id/list_avatar"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/article_subheading"
...
